# GDSC

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: 01-transfer-learning.ipynb
src/biobuzz/: metadata.py
src/biobuzz/yamnet/: model.py  preprocessing.py
