[tool.poetry]
name = "biobuzz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
	{ include = "biobuzz", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
scikit-learn = "^1.2.2"
librosa = "^0.10.0.post2"
matplotlib = "^3.7.1"
tensorflow = "^2.12.0"
tensorflow-io = "^0.32.0"
tensorflow-hub = "^0.13.0"
pandas = "^2.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
ipython = "^8.12.1"
nbstripout = "^0.6.1"
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
